Simple api implementation
